--- a/db.bib
+++ b/db.bib
@@ -1,3 +1,22 @@
+@inproceedings{10.1007/978-3-319-69005-6_6,
+ abstract = {Word segmentation problem is widely solved as the sequence labeling problem. The traditional way to this kind of problem is machine learning method like conditional random field with hand-crafted features. Recently, deep learning approaches have achieved state-of-the-art performance on word segmentation task and a popular method of them is LSTM networks. This paper gives a method to introduce numerical statistics-based features counted on unlabeled data into LSTM networks and analyzes how it enhances the performance of word segmentation model. We add pre-trained character-bigram embedding, pointwise mutual information, accessor variety and punctuation variety into our model and compare their performances on different datasets including three datasets from CoNLL-2017 shared task and three datasets of simplified Chinese. We achieve the state-of-the-art performance on two of them and get comparable results on the rest.},
+ address = {Cham},
+ author = {Zheng, Bo
+and Che, Wanxiang
+and Guo, Jiang
+and Liu, Ting},
+ booktitle = {Chinese Computational Linguistics and Natural Language Processing Based on Naturally Annotated Big Data},
+ editor = {Sun, Maosong
+and Wang, Xiaojie
+and Chang, Baobao
+and Xiong, Deyi},
+ isbn = {978-3-319-69005-6},
+ pages = {60--70},
+ publisher = {Springer International Publishing},
+ title = {Enhancing LSTM-based Word Segmentation Using Unlabeled Data},
+ year = {2017}
+}
+
 @inproceedings{10.1007/978-3-642-04235-5_30,
  abstract = {To add to WordNet's contents, and specifically to aid automatic reasoning with WordNet, we classify and label the current relations among derivationally and semantically related noun-verb pairs. Manual inspection of thousands of pairs shows that there is no one-to-one mapping of form and meaning for derivational affixes, which exhibit far less regularity than expected. We determine a set of semantic relations found across a number of morphologically defined noun-verb pair classes.},
  address = {Berlin, Heidelberg},
