--- a/db.bib
+++ b/db.bib
@@ -1603,6 +1603,18 @@ long-distance dependencies but can still make surprisingly obvious errors, and
  year = {2010}
 }
 
+@inproceedings{jean-EtAl:2015:ACL-IJCNLP,
+ address = {Beijing, China},
+ author = {Jean, S\'{e}bastien  and  Cho, Kyunghyun  and  Memisevic, Roland  and  Bengio, Yoshua},
+ booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+ month = {July},
+ pages = {1--10},
+ publisher = {Association for Computational Linguistics},
+ title = {On Using Very Large Target Vocabulary for Neural Machine Translation},
+ url = {http://www.aclweb.org/anthology/P15-1001},
+ year = {2015}
+}
+
 @inproceedings{jiang-EtAl:2013:ACL2013,
  address = {Sofia, Bulgaria},
  author = {Jiang, Wenbin  and  Sun, Meng  and  L\"{u}, Yajuan  and  Yang, Yating  and  Liu, Qun},
