--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1410,6 +1410,15 @@ long-distance dependencies but can still make surprisingly obvious errors, and
  year = {2010}
 }
 
+@inproceedings{jean-EtAl:2015:ACL-IJCNLP,
+ author = {Jean, S\'{e}bastien  and  Cho, Kyunghyun  and  Memisevic, Roland  and  Bengio, Yoshua},
+ booktitle = {Proc. of ACL-2015},
+ publisher = {ACL},
+ title = {On Using Very Large Target Vocabulary for Neural Machine Translation},
+ url = {http://www.aclweb.org/anthology/P15-1001},
+ year = {2015}
+}
+
 @inproceedings{jiang-EtAl:2013:ACL2013,
  author = {Jiang, Wenbin  and  Sun, Meng  and  L\"{u}, Yajuan  and  Yang, Yating  and  Liu, Qun},
  booktitle = {Proc. of ACL-2013},
