--- a/shortdb.bib
+++ b/shortdb.bib
@@ -213,9 +213,9 @@ system achieved the third place overall and the second place for the surprise
 languages.},
  author = {Bj\"{o}rkelund, Anders  and  Falenska, Agnieszka  and  Yu, Xiang  and  Kuhn, Jonas},
  booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ link = {http://www.aclweb.org/anthology/K17-3004},
  publisher = {ACL},
  title = {IMS at the CoNLL 2017 UD Shared Task: CRFs and Perceptrons Meet Neural Networks},
- url = {http://www.aclweb.org/anthology/K17-3004},
  year = {2017}
 }
 
@@ -304,10 +304,10 @@ and Che, Wanxiang
 and Wang, Haifeng
 and Liu, Ting},
  booktitle = {Proc. of Coling 2016},
+ link = {http://www.aclweb.org/anthology/C16-1002},
  location = {Osaka, Japan},
  publisher = {The COLING 2016 Organizing Committee},
  title = {A Universal Framework for Inductive Transfer Parsing across Multi-typed Treebanks},
- url = {http://www.aclweb.org/anthology/C16-1002},
  year = {2016}
 }
 
@@ -392,8 +392,7 @@ and Liu, Ting},
 @inproceedings{che-EtAl:2017:K17-3,
  abstract = {This paper describes our system (HIT-SCIR) for the CoNLL 2017 shared task:
 Multilingual Parsing from Raw Text to Universal Dependencies.
-Our system includes three pipelined components: \textit{tokenization},
-\textit{Part-of-Speech} (POS) \textit{tagging} and \textit{dependency parsing}.
+Our system includes three pipelined components: \textit{tokenization}, \textit{Part-of-Speech} (POS) \textit{tagging} and \textit{dependency parsing}.
 We use character-based bidirectional long short-term memory (LSTM) networks for
 both tokenization and POS tagging.
 Afterwards, we employ a list-based transition-based algorithm for general
@@ -406,9 +405,9 @@ improvement of 3.76\% in LAS of all languages. And finally, we rank the 4th
 place on the official test sets.},
  author = {Che, Wanxiang  and  Guo, Jiang  and  Wang, Yuxuan  and  Zheng, Bo  and  Zhao, Huaipeng  and  Liu, Yang  and  Teng, Dechuan  and  Liu, Ting},
  booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ link = {http://www.aclweb.org/anthology/K17-3005},
  publisher = {ACL},
  title = {The HIT-SCIR System for End-to-End Parsing of Universal Dependencies},
- url = {http://www.aclweb.org/anthology/K17-3005},
  year = {2017}
 }
 
@@ -654,10 +653,10 @@ Jeffrey Dean},
  biburl = {https://dblp.org/rec/bib/journals/corr/abs-1709-03756},
  eprint = {1709.03756},
  journal = {CoRR},
+ link = {http://arxiv.org/abs/1709.03756},
  timestamp = {Thu, 05 Oct 2017 09:42:55 +0200},
  title = {Cross-lingual Word Segmentation and Morpheme Segmentation as Sequence
 Labelling},
- url = {http://arxiv.org/abs/1709.03756},
  volume = {abs/1709.03756},
  year = {2017}
 }
@@ -674,9 +673,9 @@ Eduard H. Hovy},
  biburl = {https://dblp.org/rec/bib/journals/corr/abs-1805-01087},
  eprint = {1805.01087},
  journal = {CoRR},
+ link = {http://arxiv.org/abs/1805.01087},
  timestamp = {Mon, 04 Jun 2018 17:53:36 +0200},
  title = {Stack-Pointer Networks for Dependency Parsing},
- url = {http://arxiv.org/abs/1805.01087},
  volume = {abs/1805.01087},
  year = {2018}
 }
@@ -692,9 +691,9 @@ Ting Liu},
  biburl = {https://dblp.org/rec/bib/journals/corr/abs-1805-11224},
  eprint = {1805.11224},
  journal = {CoRR},
+ link = {http://arxiv.org/abs/1805.11224},
  timestamp = {Mon, 18 Jun 2018 17:28:00 +0200},
  title = {Distilling Knowledge for Search-based Structured Prediction},
- url = {http://arxiv.org/abs/1805.11224},
  volume = {abs/1805.11224},
  year = {2018}
 }
@@ -709,9 +708,9 @@ Tomas Mikolov},
  biburl = {https://dblp.org/rec/bib/journals/corr/BojanowskiGJM16},
  eprint = {1607.04606},
  journal = {CoRR},
+ link = {http://arxiv.org/abs/1607.04606},
  timestamp = {Wed, 07 Jun 2017 14:42:29 +0200},
  title = {Enriching Word Vectors with Subword Information},
- url = {http://arxiv.org/abs/1607.04606},
  volume = {abs/1607.04606},
  year = {2016}
 }
@@ -838,10 +837,10 @@ Nils Y. Hammerla},
  biburl = {https://dblp.org/rec/bib/journals/corr/SmithTHH17},
  eprint = {1702.03859},
  journal = {CoRR},
+ link = {http://arxiv.org/abs/1702.03859},
  timestamp = {Wed, 07 Jun 2017 14:41:58 +0200},
  title = {Offline bilingual word vectors, orthogonal transformations and the
 inverted softmax},
- url = {http://arxiv.org/abs/1702.03859},
  volume = {abs/1702.03859},
  year = {2017}
 }
@@ -926,9 +925,9 @@ the official test run, which improved to 70.49 after bug fixes. We obtained the
 2nd best result for sentence segmentation with a score of 89.03.},
  author = {de Lhoneux, Miryam  and  Shao, Yan  and  Basirat, Ali  and  Kiperwasser, Eliyahu  and  Stymne, Sara  and  Goldberg, Yoav  and  Nivre, Joakim},
  booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ link = {http://www.aclweb.org/anthology/K17-3022},
  publisher = {ACL},
  title = {From Raw Text to Universal Dependencies - Look, No Tags!},
- url = {http://www.aclweb.org/anthology/K17-3022},
  year = {2017}
 }
 
@@ -958,14 +957,13 @@ dependency parses from segmented and tokenized sequences of words. In order to
 address the rare word problem that abounds in languages with complex
 morphology, we include a character-based word representation that uses an LSTM
 to produce embeddings from sequences of characters. Our system was ranked first
-according to all five relevant metrics for the system: UPOS tagging (93.09%),
-XPOS tagging (82.27%), unlabeled attachment score (81.30%), labeled attachment
+according to all five relevant metrics for the system: UPOS tagging (93.09%), XPOS tagging (82.27%), unlabeled attachment score (81.30%), labeled attachment
 score (76.30%), and content word labeled attachment score (72.57%).},
  author = {Dozat, Timothy  and  Qi, Peng  and  Manning, Christopher D.},
  booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ link = {http://www.aclweb.org/anthology/K17-3002},
  publisher = {ACL},
  title = {Stanford's Graph-based Neural Dependency Parser at the CoNLL 2017 Shared Task},
- url = {http://www.aclweb.org/anthology/K17-3002},
  year = {2017}
 }
 
@@ -1229,9 +1227,9 @@ graphs.},
 @inproceedings{guo-EtAl:2015:ACL-IJCNLP2,
  author = {Guo, Jiang  and  Che, Wanxiang  and  Yarowsky, David  and  Wang, Haifeng  and  Liu, Ting},
  booktitle = {Proc. of ACL-2015},
+ link = {http://www.aclweb.org/anthology/P15-1119},
  publisher = {ACL},
  title = {Cross-lingual Dependency Parsing Based on Distributed Representations},
- url = {http://www.aclweb.org/anthology/P15-1119},
  year = {2015}
 }
 
@@ -1292,9 +1290,9 @@ long-distance dependencies but can still make surprisingly obvious errors, and
 (2) that there is still room for syntactic parsers to improve these results.},
  author = {He, Luheng  and  Lee, Kenton  and  Lewis, Mike  and  Zettlemoyer, Luke},
  booktitle = {Proc. of ACL-2017},
+ link = {http://aclweb.org/anthology/P17-1044},
  publisher = {ACL},
  title = {Deep Semantic Role Labeling: What Works and What’s Next},
- url = {http://aclweb.org/anthology/P17-1044},
  year = {2017}
 }
 
@@ -1413,9 +1411,9 @@ long-distance dependencies but can still make surprisingly obvious errors, and
 @inproceedings{jean-EtAl:2015:ACL-IJCNLP,
  author = {Jean, S\'{e}bastien  and  Cho, Kyunghyun  and  Memisevic, Roland  and  Bengio, Yoshua},
  booktitle = {Proc. of ACL-2015},
+ link = {http://www.aclweb.org/anthology/P15-1001},
  publisher = {ACL},
  title = {On Using Very Large Target Vocabulary for Neural Machine Translation},
- url = {http://www.aclweb.org/anthology/P15-1001},
  year = {2015}
 }
 
@@ -1444,6 +1442,16 @@ long-distance dependencies but can still make surprisingly obvious errors, and
  publisher = {ACL},
  title = {Instance Weighting for Domain Adaptation in NLP},
  year = {2007}
+}
+
+@inproceedings{joshi-peters-hopkins:2018:Long,
+ abstract = {We revisit domain adaptation for parsers in the neural era. First we show that recent advances in word representations greatly diminish the need for domain adaptation when the target domain is syntactically similar to the source domain. As evidence, we train a parser on the Wall Street Journal alone that achieves over 90% F1 on the Brown corpus. For more syntactically distant domains, we provide a simple way to adapt a parser using only dozens of partial annotations. For instance, we increase the percentage of error-free geometry-domain parses in a held-out set from 45% to 73% using approximately five dozen training examples. In the process, we demonstrate a new state-of-the-art single model result on the Wall Street Journal test set of 94.3%. This is an absolute increase of 1.7% over the previous state-of-the-art of 92.6%.},
+ author = {Joshi, Vidur  and  Peters, Matthew  and  Hopkins, Mark},
+ booktitle = {Proc. of ACL-2018},
+ link = {http://www.aclweb.org/anthology/P18-1110},
+ publisher = {ACL},
+ title = {Extending a Parser to Distant Domains Using a Few Dozen Partially Annotated Examples},
+ year = {2018}
 }
 
 @inproceedings{kazama-torisawa:2008:ACLMain,
@@ -1787,8 +1795,7 @@ of graph-to-sequence conversions.},
  abstract = {In this paper, we propose a probabilistic parsing model that defines a proper
 conditional probability distribution over non-projective
 dependency trees for a given sentence, using neural representations as inputs.
-The neural network architecture is based on bi-directional LSTMCNNs,
-which automatically benefits from both word- and character-level
+The neural network architecture is based on bi-directional LSTMCNNs, which automatically benefits from both word- and character-level
 representations, by using a combination of bidirectional LSTMs and CNNs. On top
 of the neural network, we introduce a probabilistic structured layer, defining
 a conditional log-linear model over non-projective trees. By exploiting
@@ -1799,9 +1806,9 @@ different datasets, across 14 different languages. Our parser achieves
 state-of-the-art parsing performance on nine datasets.},
  author = {Ma, Xuezhe  and  Hovy, Eduard},
  booktitle = {Proc. of IJCNLP-2017},
+ link = {http://www.aclweb.org/anthology/I17-1007},
  publisher = {Asian Federation of Natural Language Processing},
  title = {Neural Probabilistic Model for Non-projective MST Parsing},
- url = {http://www.aclweb.org/anthology/I17-1007},
  year = {2017}
 }
 
@@ -1946,10 +1953,10 @@ and Qin, Bing
 and Schneider, Nathan
 and Smith, Noah A.},
  booktitle = {Proc. of NAACL-2018},
+ link = {http://aclweb.org/anthology/N18-1088},
  location = {New Orleans, Louisiana},
  publisher = {ACL},
  title = {Parsing Tweets into Universal Dependencies},
- url = {http://aclweb.org/anthology/N18-1088},
  year = {2018}
 }
 
@@ -1962,10 +1969,10 @@ and Clark, Christopher
 and Lee, Kenton
 and Zettlemoyer, Luke},
  booktitle = {Proc. of NAACL-2018},
+ link = {http://aclweb.org/anthology/N18-1202},
  location = {New Orleans, Louisiana},
  publisher = {ACL},
  title = {Deep Contextualized Word Representations},
- url = {http://aclweb.org/anthology/N18-1202},
  year = {2018}
 }
 
@@ -2466,28 +2473,26 @@ In addition, we had the top average performance on the four surprise languages
 and on the small treebank subset.},
  author = {Shi, Tianze  and  Wu, Felix G.  and  Chen, Xilun  and  Cheng, Yao},
  booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ link = {http://www.aclweb.org/anthology/K17-3003},
  publisher = {ACL},
  title = {Combining Global Models for Parsing Universal Dependencies},
- url = {http://www.aclweb.org/anthology/K17-3003},
  year = {2017}
 }
 
 @inproceedings{shi-huang-lee:2017:EMNLP2017,
- abstract = {We first present a minimal feature set for transition-based dependency parsing,
-continuing a recent trend started by Kiperwasser and Goldberg (2016a) and Cross
+ abstract = {We first present a minimal feature set for transition-based dependency parsing, continuing a recent trend started by Kiperwasser and Goldberg (2016a) and Cross
 and Huang (2016a) of using bi-directional LSTM features. We plug our minimal
 feature set into the dynamic-programming framework of Huang and Sagae (2010)
 and Kuhlmann et al. (2011) to produce the first implementation of worst-case
 O(n\^{}3) exact decoders for arc-hybrid and arc-eager transition systems. With our
-minimal features, we also present O(n\^{}3) global training methods. Finally,
-using ensembles including our new parsers, we achieve the best unlabeled
+minimal features, we also present O(n\^{}3) global training methods. Finally, using ensembles including our new parsers, we achieve the best unlabeled
 attachment score reported (to our knowledge) on the Chinese Treebank and the
 ``second-best-in-class'' result on the English Penn Treebank.},
  author = {Shi, Tianze  and  Huang, Liang  and  Lee, Lillian},
  booktitle = {Proc. of EMNLP-2017},
+ link = {https://www.aclweb.org/anthology/D17-1002},
  publisher = {ACL},
  title = {Fast(er) Exact Decoding and Global Training for Transition-Based Dependency Parsing via a Minimal Feature Set},
- url = {https://www.aclweb.org/anthology/D17-1002},
  year = {2017}
 }
 
@@ -2784,7 +2789,7 @@ and decoding speed of a single NMT network but performs on the level of a
  author = {Nivre, Joakim and others},
  copyright = {Licence Universal Dependencies v2.2},
  note = {{LINDAT}/{CLARIN} digital library at the Institute of Formal and Applied Linguistics, Charles University, Prague, \url{http://hdl.handle.net/11234/ SUPPLY THE NEW PERMANENT ID HERE!}},
- title = {{Universal Dependencies 2.2}},
+ title = {Universal Dependencies 2.2},
  url_old_2017_replace_by_new_one = {http://hdl.handle.net/11234/1-2184},
  year = {2018}
 }
@@ -2801,18 +2806,18 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
 
 @inproceedings{udst:overview,
  author = {Daniel Zeman and Filip Ginter and Jan Haji{\v{c}} and Joakim Nivre and Martin Popel and Milan Straka},
- booktitle = {{Proc. of the CoNLL 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+ booktitle = {Proc. of the CoNLL 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
  pages_to_be_updated = {1--20},
  publisher = {ACL},
- title = {{CoNLL 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+ title = {CoNLL 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
  year = {2018}
 }
 
 @inproceedings{udst:overview2017,
  author = {Zeman, Daniel and Popel, Martin and Straka, Milan and Haji{\v{c}}, Jan and Nivre, Joakim and Ginter, Filip and Luotolahti, Juhani and Pyysalo, Sampo and Petrov, Slav and Potthast, Martin and Tyers, Francis and Badmaeva, Elena and G{\"{o}}k{\i}rmak, Memduh and Nedoluzhko, Anna and Cinkov{\'{a}}, Silvie and Haji{\v{c}} jr., Jan and Hlav{\'{a}}{\v{c}}ov{\'{a}}, Jaroslava and Kettnerov{\'{a}}, V{\'{a}}clava and Ure{\v{s}}ov{\'{a}}, Zde{\v{n}}ka and Kanerva, Jenna and Ojala, Stina and Missil{\"{a}}, Anna and Manning, Christopher and Schuster, Sebastian and Reddy, Siva and Taji, Dima and Habash, Nizar and Leung, Herman and de Marneffe, Marie-Catherine and Sanguinetti, Manuela and Simi, Maria and Kanayama, Hiroshi and de Paiva, Valeria and Droganova, Kira and Mart{\'{\i}}nez Alonso, H{\'{e}}ctor and {\c{C}}{\"{o}}ltekin, {\c{C}}a{\u{g}}r{\i} and Sulubacak, Umut and Uszkoreit, Hans and Macketanz, Vivien and Burchardt, Aljoscha and Harris, Kim and Marheinecke, Katrin and Rehm, Georg and Kayadelen, Tolga and Attia, Mohammed and Elkahky, Ali and Yu, Zhuoran and Pitler, Emily and Lertpradit, Saran and Mandl, Michael and Kirchner, Jesse and Fernandez Alcalde, Hector and Strnadova, Jana and Banerjee, Esha and Manurung, Ruli and Stella, Antonio and Shimada, Atsuko and Kwak, Sookyoung and Mendon{\c{c}}a, Gustavo and Lando, Tatiana and Nitisaroj, Rattima and Li, Josie},
- booktitle = {{Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+ booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
  publisher = {ACL},
- title = {{CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+ title = {CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
  year = {2017}
 }
 
