--- a/db.bib
+++ b/db.bib
@@ -1868,6 +1868,19 @@ of graph-to-sequence conversions.},
  year = {2014}
 }
 
+@inproceedings{lee-he-zettlemoyer:2018:N18-2,
+ abstract = {We introduce a fully-differentiable approximation to higher-order inference for coreference resolution. Our approach uses the antecedent distribution from a span-ranking architecture as an attention mechanism to iteratively refine span representations. This enables the model to softly consider multiple hops in the predicted clusters. To alleviate the computational cost of this iterative process, we introduce a coarse-to-fine approach that incorporates a less accurate but more efficient bilinear factor, enabling more aggressive pruning without hurting accuracy. Compared to the existing state-of-the-art span-ranking approach, our model significantly improves accuracy on the English OntoNotes benchmark, while being far more computationally efficient.},
+ address = {New Orleans, Louisiana},
+ author = {Lee, Kenton  and  He, Luheng  and  Zettlemoyer, Luke},
+ booktitle = {Proceedings of the 2018 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 2 (Short Papers)},
+ link = {http://www.aclweb.org/anthology/N18-2108},
+ month = {June},
+ pages = {687--692},
+ publisher = {Association for Computational Linguistics},
+ title = {Higher-Order Coreference Resolution with Coarse-to-Fine Inference},
+ year = {2018}
+}
+
 @inproceedings{li-zhang-chen:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
