--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1420,6 +1420,15 @@ of graph-to-sequence conversions.},
  year = {2014}
 }
 
+@inproceedings{lee-he-zettlemoyer:2018:N18-2,
+ abstract = {We introduce a fully-differentiable approximation to higher-order inference for coreference resolution. Our approach uses the antecedent distribution from a span-ranking architecture as an attention mechanism to iteratively refine span representations. This enables the model to softly consider multiple hops in the predicted clusters. To alleviate the computational cost of this iterative process, we introduce a coarse-to-fine approach that incorporates a less accurate but more efficient bilinear factor, enabling more aggressive pruning without hurting accuracy. Compared to the existing state-of-the-art span-ranking approach, our model significantly improves accuracy on the English OntoNotes benchmark, while being far more computationally efficient.},
+ author = {Lee, Kenton  and  He, Luheng  and  Zettlemoyer, Luke},
+ booktitle = {Proc. of NAACL},
+ link = {http://www.aclweb.org/anthology/N18-2108},
+ title = {Higher-Order Coreference Resolution with Coarse-to-Fine Inference},
+ year = {2018}
+}
+
 @inproceedings{li-EtAl:2016:EMNLP20162,
  author = {Li, Jiwei  and  Monroe, Will  and  Ritter, Alan  and  Jurafsky, Dan  and  Galley, Michel  and  Gao, Jianfeng},
  booktitle = {Proc. of EMNLP},
