--- a/tinydb.bib
+++ b/tinydb.bib
@@ -149,13 +149,12 @@ judgements from the World Atlas of Language Structures (WALS), and compare them
 to four quantitative measures automatically calculated from language corpora.
 These consist of three previously defined corpus-derived measures, which are
 all monolingual, and one new measure based on automatic word-alignment across
-pairs of languages. We find strong correlations between all the measures,
-illustrating that both expert judgements and automated approaches converge to
+pairs of languages. We find strong correlations between all the measures, illustrating that both expert judgements and automated approaches converge to
 similar complexity ratings, and can be used interchangeably.},
  author = {Bentz, Christian  and  Ruzsics, Tatyana  and  Koplenig, Alexander  and  Samardzic, Tanja},
  booktitle = {Proc. of the Workshop on Computational Linguistics for Linguistic Complexity (CL4LC)},
+ link = {http://aclweb.org/anthology/W16-4117},
  title = {A Comparison Between Morphological Complexity Measures: Typological Data vs. Language Corpora},
- url = {http://aclweb.org/anthology/W16-4117},
  year = {2016}
 }
 
@@ -2505,6 +2504,15 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  author = {Zeman, Daniel and Popel, Martin and Straka, Milan and Haji{\v{c}}, Jan and Nivre, Joakim and Ginter, Filip and Luotolahti, Juhani and Pyysalo, Sampo and Petrov, Slav and Potthast, Martin and Tyers, Francis and Badmaeva, Elena and G{\"{o}}k{\i}rmak, Memduh and Nedoluzhko, Anna and Cinkov{\'{a}}, Silvie and Haji{\v{c}} jr., Jan and Hlav{\'{a}}{\v{c}}ov{\'{a}}, Jaroslava and Kettnerov{\'{a}}, V{\'{a}}clava and Ure{\v{s}}ov{\'{a}}, Zde{\v{n}}ka and Kanerva, Jenna and Ojala, Stina and Missil{\"{a}}, Anna and Manning, Christopher and Schuster, Sebastian and Reddy, Siva and Taji, Dima and Habash, Nizar and Leung, Herman and de Marneffe, Marie-Catherine and Sanguinetti, Manuela and Simi, Maria and Kanayama, Hiroshi and de Paiva, Valeria and Droganova, Kira and Mart{\'{\i}}nez Alonso, H{\'{e}}ctor and {\c{C}}{\"{o}}ltekin, {\c{C}}a{\u{g}}r{\i} and Sulubacak, Umut and Uszkoreit, Hans and Macketanz, Vivien and Burchardt, Aljoscha and Harris, Kim and Marheinecke, Katrin and Rehm, Georg and Kayadelen, Tolga and Attia, Mohammed and Elkahky, Ali and Yu, Zhuoran and Pitler, Emily and Lertpradit, Saran and Mandl, Michael and Kirchner, Jesse and Fernandez Alcalde, Hector and Strnadova, Jana and Banerjee, Esha and Manurung, Ruli and Stella, Antonio and Shimada, Atsuko and Kwak, Sookyoung and Mendon{\c{c}}a, Gustavo and Lando, Tatiana and Nitisaroj, Rattima and Li, Josie},
  title = {CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
  year = {2017}
+}
+
+@book{wals,
+ address = {Leipzig},
+ editor = {Matthew S. Dryer and Martin Haspelmath},
+ link = {https://wals.info/},
+ publisher = {Max Planck Institute for Evolutionary Anthropology},
+ title = {WALS Online},
+ year = {2013}
 }
 
 @inproceedings{wan-EtAl:2009:EACL,
