--- a/shortdb.bib
+++ b/shortdb.bib
@@ -205,14 +205,13 @@ judgements from the World Atlas of Language Structures (WALS), and compare them
 to four quantitative measures automatically calculated from language corpora.
 These consist of three previously defined corpus-derived measures, which are
 all monolingual, and one new measure based on automatic word-alignment across
-pairs of languages. We find strong correlations between all the measures,
-illustrating that both expert judgements and automated approaches converge to
+pairs of languages. We find strong correlations between all the measures, illustrating that both expert judgements and automated approaches converge to
 similar complexity ratings, and can be used interchangeably.},
  author = {Bentz, Christian  and  Ruzsics, Tatyana  and  Koplenig, Alexander  and  Samardzic, Tanja},
  booktitle = {Proc. of the Workshop on Computational Linguistics for Linguistic Complexity (CL4LC)},
+ link = {http://aclweb.org/anthology/W16-4117},
  publisher = {The COLING 2016 Organizing Committee},
  title = {A Comparison Between Morphological Complexity Measures: Typological Data vs. Language Corpora},
- url = {http://aclweb.org/anthology/W16-4117},
  year = {2016}
 }
 
@@ -2852,6 +2851,15 @@ Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
  publisher = {ACL},
  title = {CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
  year = {2017}
+}
+
+@book{wals,
+ address = {Leipzig},
+ editor = {Matthew S. Dryer and Martin Haspelmath},
+ link = {https://wals.info/},
+ publisher = {Max Planck Institute for Evolutionary Anthropology},
+ title = {WALS Online},
+ year = {2013}
 }
 
 @inproceedings{wan-EtAl:2009:EACL,
