--- a/db.bib
+++ b/db.bib
@@ -507,6 +507,18 @@ place on the official test sets.},
  year = {2017}
 }
 
+@inproceedings{chen-EtAl:2009:EMNLP,
+ address = {Singapore},
+ author = {Chen, Wenliang  and  Kazama, Jun'ichi  and  Uchimoto, Kiyotaka  and  Torisawa, Kentaro},
+ booktitle = {Proceedings of the 2009 Conference on Empirical Methods in Natural Language Processing},
+ link = {http://www.aclweb.org/anthology/D/D09/D09-1060},
+ month = {August},
+ pages = {570--579},
+ publisher = {Association for Computational Linguistics},
+ title = {Improving Dependency Parsing with Subtrees from Auto-Parsed Data},
+ year = {2009}
+}
+
 @inproceedings{chen-manning:2014:EMNLP2014,
  address = {Doha, Qatar},
  author = {Chen, Danqi  and  Manning, Christopher},
