--- a/tinydb.bib
+++ b/tinydb.bib
@@ -322,6 +322,14 @@ place on the official test sets.},
  year = {2017}
 }
 
+@inproceedings{chen-EtAl:2009:EMNLP,
+ author = {Chen, Wenliang  and  Kazama, Jun'ichi  and  Uchimoto, Kiyotaka  and  Torisawa, Kentaro},
+ booktitle = {Proc. of EMNLP},
+ link = {http://www.aclweb.org/anthology/D/D09/D09-1060},
+ title = {Improving Dependency Parsing with Subtrees from Auto-Parsed Data},
+ year = {2009}
+}
+
 @inproceedings{chen-manning:2014:EMNLP2014,
  author = {Chen, Danqi  and  Manning, Christopher},
  booktitle = {Proc. of EMNLP},
