--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1862,6 +1862,14 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2014}
 }
 
+@article{maaten2008visualizing,
+ author = {Maaten, Laurens van der and Hinton, Geoffrey},
+ journal = {Journal of machine learning research},
+ title = {Visualizing data using t-SNE},
+ volume = {9},
+ year = {2008}
+}
+
 @inproceedings{mann-mccallum:2008:ACLMain,
  author = {Mann, Gideon S.  and  McCallum, Andrew},
  booktitle = {Proc. of ACL-08: HLT},
