--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2246,6 +2246,16 @@ and Zettlemoyer, Luke},
  year = {1999}
 }
 
+@inproceedings{P18-1031,
+ author = {Howard, Jeremy
+and Ruder, Sebastian},
+ booktitle = {Proc. of ACL-2018},
+ location = {Melbourne, Australia},
+ publisher = {ACL},
+ title = {Universal Language Model Fine-tuning for Text Classification},
+ year = {2018}
+}
+
 @inproceedings{pan-EtAl:2015:NAACL-HLT,
  author = {Pan, Xiaoman  and  Cassidy, Taylor  and  Hermjakob, Ulf  and  Ji, Heng  and  Knight, Kevin},
  booktitle = {Proc. of NAACL-2015},
