--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1957,6 +1957,15 @@ and Zettlemoyer, Luke},
  year = {2013}
 }
 
+@inproceedings{P18-1031,
+ author = {Howard, Jeremy
+and Ruder, Sebastian},
+ booktitle = {Proc. of ACL},
+ location = {Melbourne, Australia},
+ title = {Universal Language Model Fine-tuning for Text Classification},
+ year = {2018}
+}
+
 @inproceedings{pan-EtAl:2015:NAACL-HLT,
  author = {Pan, Xiaoman  and  Cassidy, Taylor  and  Hermjakob, Ulf  and  Ji, Heng  and  Knight, Kevin},
  booktitle = {Proc. of NAACL},
