--- a/db.bib
+++ b/db.bib
@@ -2550,6 +2550,17 @@ and Zettlemoyer, Luke},
  year = {1999}
 }
 
+@inproceedings{P18-1031,
+ author = {Howard, Jeremy
+and Ruder, Sebastian},
+ booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ location = {Melbourne, Australia},
+ pages = {328--339},
+ publisher = {Association for Computational Linguistics},
+ title = {Universal Language Model Fine-tuning for Text Classification},
+ year = {2018}
+}
+
 @inproceedings{pan-EtAl:2015:NAACL-HLT,
  address = {Denver, Colorado},
  author = {Pan, Xiaoman  and  Cassidy, Taylor  and  Hermjakob, Ulf  and  Ji, Heng  and  Knight, Kevin},
