--- a/shortdb.bib
+++ b/shortdb.bib
@@ -729,6 +729,23 @@ Ting Liu},
  year = {2018}
 }
 
+@article{DBLP:journals/corr/abs-1808-08949,
+ archiveprefix = {arXiv},
+ author = {Matthew E. Peters and
+Mark Neumann and
+Luke Zettlemoyer and
+Wen{-}tau Yih},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1808-08949},
+ eprint = {1808.08949},
+ journal = {CoRR},
+ link = {http://arxiv.org/abs/1808.08949},
+ timestamp = {Sun, 02 Sep 2018 15:01:56 +0200},
+ title = {Dissecting Contextual Word Embeddings: Architecture and Representation},
+ volume = {abs/1808.08949},
+ year = {2018}
+}
+
 @article{DBLP:journals/corr/BojanowskiGJM16,
  archiveprefix = {arXiv},
  author = {Piotr Bojanowski and
