--- a/db.bib
+++ b/db.bib
@@ -2578,6 +2578,19 @@ and Ruder, Sebastian},
  year = {2018}
 }
 
+@inproceedings{P18-1171,
+ author = {Peng, Xiaochang
+and Song, Linfeng
+and Gildea, Daniel
+and Satta, Giorgio},
+ booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ location = {Melbourne, Australia},
+ pages = {1842--1852},
+ publisher = {Association for Computational Linguistics},
+ title = {Sequence-to-sequence Models for Cache Transition Systems},
+ year = {2018}
+}
+
 @inproceedings{pan-EtAl:2015:NAACL-HLT,
  address = {Denver, Colorado},
  author = {Pan, Xiaoman  and  Cassidy, Taylor  and  Hermjakob, Ulf  and  Ji, Heng  and  Knight, Kevin},
