--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1983,6 +1983,17 @@ and Ruder, Sebastian},
  year = {2018}
 }
 
+@inproceedings{P18-1171,
+ author = {Peng, Xiaochang
+and Song, Linfeng
+and Gildea, Daniel
+and Satta, Giorgio},
+ booktitle = {Proc. of ACL},
+ location = {Melbourne, Australia},
+ title = {Sequence-to-sequence Models for Cache Transition Systems},
+ year = {2018}
+}
+
 @inproceedings{pan-EtAl:2015:NAACL-HLT,
  author = {Pan, Xiaoman  and  Cassidy, Taylor  and  Hermjakob, Ulf  and  Ji, Heng  and  Knight, Kevin},
  booktitle = {Proc. of NAACL},
