--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1983,6 +1983,15 @@ and Ruder, Sebastian},
  year = {2018}
 }
 
+@inproceedings{P18-1037,
+ author = {Lyu, Chunchuan
+and Titov, Ivan},
+ booktitle = {Proc. of ACL},
+ location = {Melbourne, Australia},
+ title = {AMR Parsing as Graph Prediction with Latent Alignment},
+ year = {2018}
+}
+
 @inproceedings{P18-1171,
  author = {Peng, Xiaochang
 and Song, Linfeng
