--- a/db.bib
+++ b/db.bib
@@ -2578,6 +2578,17 @@ and Ruder, Sebastian},
  year = {2018}
 }
 
+@inproceedings{P18-1037,
+ author = {Lyu, Chunchuan
+and Titov, Ivan},
+ booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ location = {Melbourne, Australia},
+ pages = {397--407},
+ publisher = {Association for Computational Linguistics},
+ title = {AMR Parsing as Graph Prediction with Latent Alignment},
+ year = {2018}
+}
+
 @inproceedings{P18-1171,
  author = {Peng, Xiaochang
 and Song, Linfeng
