--- a/shortdb.bib
+++ b/shortdb.bib
@@ -2273,6 +2273,16 @@ and Ruder, Sebastian},
  year = {2018}
 }
 
+@inproceedings{P18-1037,
+ author = {Lyu, Chunchuan
+and Titov, Ivan},
+ booktitle = {Proc. of ACL-2018},
+ location = {Melbourne, Australia},
+ publisher = {ACL},
+ title = {AMR Parsing as Graph Prediction with Latent Alignment},
+ year = {2018}
+}
+
 @inproceedings{P18-1171,
  author = {Peng, Xiaochang
 and Song, Linfeng
