--- a/db.bib
+++ b/db.bib
@@ -3155,6 +3155,19 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2008}
 }
 
+@inproceedings{szubert-lopez-schneider:2018:N18-1,
+ abstract = {Abstract Meaning Representation (AMR) annotations are often assumed to closely mirror dependency syntax, but AMR explicitly does not require this, and the assumption has never been tested. To test it, we devise an expressive framework to align AMR graphs to dependency graphs, which we use to annotate 200 AMRs. Our annotation explains how 97% of AMR edges are evoked by words or syntax. Previously existing AMR alignment frameworks did not allow for mapping AMR onto syntax, and as a consequence they explained at most 23%. While we find that there are indeed many cases where AMR annotations closely mirror syntax, there are also pervasive differences. We use our annotations to test a baseline AMR-to-syntax aligner, finding that this task is more difficult than AMR-to-string alignment; and to pinpoint errors in an AMR parser. We make our data and code freely available for further research on AMR parsing and generation, and the relationship of AMR to syntax.},
+ address = {New Orleans, Louisiana},
+ author = {Szubert, Ida  and  Lopez, Adam  and  Schneider, Nathan},
+ booktitle = {Proceedings of the 2018 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long Papers)},
+ link = {http://www.aclweb.org/anthology/N18-1106},
+ month = {June},
+ pages = {1169--1180},
+ publisher = {Association for Computational Linguistics},
+ title = {A Structured Syntax-Semantics Interface for English-AMR Alignment},
+ year = {2018}
+}
+
 @article{TACL302,
  abstract = {We develop parsing oracles for two transition-based dependency parsers, including the arc-standard parser, solving a problem that was left open in (Goldberg and Nivre, 2013). We experimentally show that using these oracles in training yields superior parsing accuracies on many languages.},
  author = {Goldberg, Yoav  and Sartorio, Francesco  and Satta, Giorgio},
