--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2407,6 +2407,15 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2008}
 }
 
+@inproceedings{szubert-lopez-schneider:2018:N18-1,
+ abstract = {Abstract Meaning Representation (AMR) annotations are often assumed to closely mirror dependency syntax, but AMR explicitly does not require this, and the assumption has never been tested. To test it, we devise an expressive framework to align AMR graphs to dependency graphs, which we use to annotate 200 AMRs. Our annotation explains how 97% of AMR edges are evoked by words or syntax. Previously existing AMR alignment frameworks did not allow for mapping AMR onto syntax, and as a consequence they explained at most 23%. While we find that there are indeed many cases where AMR annotations closely mirror syntax, there are also pervasive differences. We use our annotations to test a baseline AMR-to-syntax aligner, finding that this task is more difficult than AMR-to-string alignment; and to pinpoint errors in an AMR parser. We make our data and code freely available for further research on AMR parsing and generation, and the relationship of AMR to syntax.},
+ author = {Szubert, Ida  and  Lopez, Adam  and  Schneider, Nathan},
+ booktitle = {Proc. of NAACL},
+ link = {http://www.aclweb.org/anthology/N18-1106},
+ title = {A Structured Syntax-Semantics Interface for English-AMR Alignment},
+ year = {2018}
+}
+
 @article{TACL145,
  author = {Goldberg, Yoav  and Nivre, Joakim},
  issn = {2307-387X},
