--- a/db.bib
+++ b/db.bib
@@ -1427,6 +1427,18 @@ graphs.},
  year = {2005}
 }
 
+@inproceedings{guo-EtAl:2014:Coling,
+ address = {Dublin, Ireland},
+ author = {Guo, Jiang  and  Che, Wanxiang  and  Wang, Haifeng  and  Liu, Ting},
+ booktitle = {Proceedings of COLING 2014, the 25th International Conference on Computational Linguistics: Technical Papers},
+ link = {http://www.aclweb.org/anthology/C14-1048},
+ month = {August},
+ pages = {497--507},
+ publisher = {Dublin City University and Association for Computational Linguistics},
+ title = {Learning Sense-specific Word Embeddings By Exploiting Bilingual Resources},
+ year = {2014}
+}
+
 @inproceedings{guo-EtAl:2014:EMNLP2014,
  address = {Doha, Qatar},
  author = {Guo, Jiang  and  Che, Wanxiang  and  Wang, Haifeng  and  Liu, Ting},
