--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1263,6 +1263,15 @@ graphs.},
  year = {2005}
 }
 
+@inproceedings{guo-EtAl:2014:Coling,
+ author = {Guo, Jiang  and  Che, Wanxiang  and  Wang, Haifeng  and  Liu, Ting},
+ booktitle = {Proc. of Coling 2014},
+ link = {http://www.aclweb.org/anthology/C14-1048},
+ publisher = {Dublin City University and ACL},
+ title = {Learning Sense-specific Word Embeddings By Exploiting Bilingual Resources},
+ year = {2014}
+}
+
 @inproceedings{guo-EtAl:2014:EMNLP2014,
  author = {Guo, Jiang  and  Che, Wanxiang  and  Wang, Haifeng  and  Liu, Ting},
  booktitle = {Proc. of EMNLP-2014},
