--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1139,6 +1139,14 @@ performance than state-of-the-art methods.},
  year = {2017}
 }
 
+@inproceedings{guo-EtAl:2014:Coling,
+ author = {Guo, Jiang  and  Che, Wanxiang  and  Wang, Haifeng  and  Liu, Ting},
+ booktitle = {Proc. of Coling},
+ link = {http://www.aclweb.org/anthology/C14-1048},
+ title = {Learning Sense-specific Word Embeddings By Exploiting Bilingual Resources},
+ year = {2014}
+}
+
 @inproceedings{guo-EtAl:2014:EMNLP2014,
  author = {Guo, Jiang  and  Che, Wanxiang  and  Wang, Haifeng  and  Liu, Ting},
  booktitle = {Proc. of EMNLP},
