--- a/db.bib
+++ b/db.bib
@@ -1248,6 +1248,23 @@ An Exploration},
  year = {2008}
 }
 
+@article{firth57synopsis,
+ abstract = {Reprinted in:  Palmer, F. R. (ed.) (1968). Selected Papers of J. R. Firth 1952-59, pages 168-205. Longmans, London.},
+ added-at = {2008-05-14T00:52:58.000+0200},
+ address = {Oxford},
+ author = {Firth, J. R.},
+ biburl = {https://www.bibsonomy.org/bibtex/25e3d6c72cdd123a638f71886d78f3c1e/brightbyte},
+ booktitle = {Studies in Linguistic Analysis (special volume of the Philological Society)},
+ interhash = {b4f769667fdd195b4a75f61f6388a52e},
+ intrahash = {5e3d6c72cdd123a638f71886d78f3c1e},
+ keyword = {classic linguistics meanign relatedness semantic},
+ pages = {1-32},
+ publisher = {The Philological Society},
+ timestamp = {2009-01-23T09:58:50.000+0100},
+ title = {A synopsis of linguistic theory 1930-55.},
+ volume = {1952-59}
+}
+
 @inproceedings{flanigan-EtAl:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Flanigan, Jeffrey  and  Thomson, Sam  and  Carbonell, Jaime  and  Dyer, Chris  and  Smith, Noah A.},
