--- a/db.bib
+++ b/db.bib
@@ -1089,6 +1089,18 @@ the official test run, which improved to 70.49 after bug fixes. We obtained the
  year = {2017}
 }
 
+@article{doi:10.1002/aris.1440380105,
+ author = {Dumais, Susan T.},
+ doi = {10.1002/aris.1440380105},
+ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/aris.1440380105},
+ journal = {Annual Review of Information Science and Technology},
+ link = {https://onlinelibrary.wiley.com/doi/abs/10.1002/aris.1440380105},
+ number = {1},
+ pages = {188-230},
+ title = {Latent semantic analysis},
+ volume = {38}
+}
+
 @article{Doppa:2014:SPV:2627435.2638577,
  acmid = {2638577},
  author = {Doppa, Janardhan Rao and Fern, Alan and Tadepalli, Prasad},
